--- a/style.css
+++ b/style.css
@@ -106,3 +106,10 @@ button{
         width: 100px;
     }
 }
+
+@media (max-width: 440px) {
+    .col{
+        height: 90px;
+        width: 90px;
+    }
+}
