ability to draw added

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body{
     text-align: center;
     color: rgb(39,39,39);
     font-size: 20px;
-
+    height: 20px;
+    padding-bottom: 15px;
 }
 
 h1{
@@ -28,8 +29,8 @@ button{
     text-align: center;
     font-size: 16px;
     padding: 10px;
-    border-radius: 10px;
-    font-weight: 600;
+    border-radius: 5px;
+    font-weight: 500;
     width: 150px;
 }
 
@@ -40,8 +41,29 @@ button:focus{
 
 button:hover {
     transform: scale(1.1) perspective(1px);
-    -webkit-transform: scale(1.1);
+    -webkit-transform: scale(1.05);
     transition: all ease;
+}
+
+input[type='range'] {
+    -webkit-appearance: none;
+    background-color: rgb(255, 255, 255);
+}
+  
+input[type='range']::-webkit-slider-runnable-track {
+    height: 10px;
+    border: 1px solid rgb(39,39,39);
+    border-radius: 25px;
+    background: rgb(255, 255, 255);
+}
+  
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 24px;
+    height: 24px;
+    border-radius: 25px;
+    margin-top: -8px;
+    background: rgb(39,39,39);
 }
 
 .container{
