--- a/style.css
+++ b/style.css
@@ -104,6 +104,10 @@ input[type='range']::-webkit-slider-thumb {
     margin: 20px;
 }
 
+#color{
+    width: 150px;
+    border: none;
+}
 
 /*Media queries*/
 @media (max-width: 1000px) {
